# QuantFrame

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  index.html
assets/: index-CMLRsEbd.css  index-XFOdwKRA.js
layer1_pipeline/: Dockerfile  __main__.py  config.yaml  database.py  fetcher.py  models.py  orchestrator.py  requirements.txt  test_pipeline.py
layer2_engine/: CMakeLists.txt
layer2_engine/include/: backtester.hpp  order_book.hpp  strategy.hpp
layer2_engine/src/: backtester.cpp  main.cpp  order_book.cpp  strategy.cpp
layer2_engine/tests/: doctest.h  test_engine.cpp
layer3_analytics/: __main__.py  llm_advisor.py  metrics.py  requirements.txt
layer4_dashboard/backend/: Dockerfile  main.py  requirements.txt
layer4_dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
layer4_dashboard/frontend/src/: App.tsx  api.ts  index.css
layer4_dashboard/frontend/src/components/: ComparisonTable.tsx  EquityCurve.tsx  MetricCard.tsx  VolumeChart.tsx
